# agentGemini

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  adk.yaml  agent.py  constants.py  example_simple_agent.py  prompt_summary.py  pyproject.toml  requirements.txt
agentGemini/: __init__.py  agent.py  config.py  models.py  prompts.py
agentGemini/services/: __init__.py  firestore_service.py
agentGemini/tools/: __init__.py  conversion_tools.py
docs/: ADK_INTEGRATION.md
entities/: README.md
scripts/: run_dev.sh  setup.sh  test.sh
shared_libraries/: README.md
sub_agents/: README.md
tools/: README.md
