[tool.poetry]
name = "agentgemini"
version = "1.0.0"
description = "Agente inteligente para ventas de maquinaria agrícola con ADK"
authors = ["Joan Marín Pagès <joan@example.com>"]
readme = "README.md"
packages = [{include = "agentGemini"}]

[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^0.1.0"
google-cloud-firestore = "^2.11.0"
google-cloud-aiplatform = "^1.38.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
structlog = "^23.1.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"